--- a/src/app.html
+++ b/src/app.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<script src="https://kit.fontawesome.com/c065641d4c.js" crossorigin="anonymous"></script>
-		<title>Rules featuring</title>
-		<meta content="Rules featuring" property="og:title" />
+		<title>Rules stats</title>
+		<meta content="Rules stats" property="og:title" />
 		<meta
-			content="Rules featuring, simple engine using Rules API to show off featuring between Rules artists."
+			content="Rules stats, website to show off stats about rules"
 			property="og:description"
 		/>
 		<meta content="" property="og:url" />
 		<meta content="" property="og:image" />
-		<meta content="#43B581" data-react-helmet="true" name="theme-color" />
+		<meta content="#800080" data-react-helmet="true" name="theme-color" />
 		%sveltekit.head%
 	</head>
 	<body>
